# approxy-clock

./: .gitignore  .travis.yml  CMakeLists.txt  readme.md
src/: ApproxyClock.c  ApproxyClock.h  main.c  main.h
test/: TestCanary.c  TestDriver.c  TestProductionCode.c
test/test_runners/: TestCanaryCode_Runner.c  TestDriverCode_Runner.c  TestProductionCode_Runner.c  all_tests.c
